# Robotic-Car-Project

./: 00_START_HERE.md  BARCODE_SCANNING_GUIDE.md  CMakeLists.txt  DEMO3_ARCHITECTURE_SUMMARY.md  DEMO3_CHECKLIST.md  DEMO3_IMPLEMENTATION_GUIDE.md  DEMO3_QUICK_START.md  DEMO3_SUMMARY.md  DOCUMENTATION_INDEX.md  INTEGRATION_NOTES.txt  ISOLATED_COMPONENT_TESTS.md  README_DEMO3.md  TIMING_IMPLEMENTATION.md
arch/: CMakeLists.txt  sys_arch.h
barcode/: CMakeLists.txt  barcode.c  barcode.h
encoder/: encoder.c  encoder.h
imu/: imu.c  imu.h
ir/: CMakeLists.txt  ir.c  ir.h
motor/: motor.c  motor.h
servo/: CMakeLists.txt  servo.c  servo.h
src/: CMakeLists.txt  FreeRTOSConfig.h  Step1_read_adc.c  adc_barcode.c  adc_barcode.h  b.c  barcode_scanner.c  barcode_task.c  barcode_task.h  barcode_test_ir.c  barcodedemo2.c  config.h  demo1.c  demo2.c  demo2v2.c  demo2v3.c  demo2v3BarcodeDetecting.c  demo2v4.c  demo3.c  demo3_line_recovery.c  demo3_line_recovery.h  demo3_obstacle.c  demo3_obstacle.h  demo_object_width.c  ir_line_test.c  line_sensor.c  line_sensor.h  main.c  main_constant_speed.c  main_integrated.c  main_ir_test.c  object_width_detection.c  tcp.c  testDemo1.c  testDemo3.c  test_adc.c  test_integration_ultrasonic_servo.c  test_obstacle_width_advanced.c  test_obstacle_width_cosine.c  test_obstacle_width_measurement.c  (+16 more)
ultrasonic/: CMakeLists.txt  ultrasonic.c
wifi/: mqtt.c  mqtt.h  wifi.c  wifi.h
